Updated Card to properly represent a Standard Deck of Cards. Updated Deck to properly work with new Cards and to initialize with a complete deck. Updated hands to have proper getNumOfCards functionality. Simplicity cleanup